--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -212,15 +212,13 @@
             </LinearLayout>
 
 
-
-        <ImageView
-            android:layout_width="306dp"
-            android:layout_height="46dp"
-            android:layout_marginLeft="27dp"
-            android:layout_marginTop="115dp"
-            android:layout_marginRight="27dp"
-            android:src="@drawable/shape_search"
-            />
+            <ImageView
+                android:layout_width="306dp"
+                android:layout_height="46dp"
+                android:layout_marginLeft="27dp"
+                android:layout_marginTop="115dp"
+                android:layout_marginRight="27dp"
+                android:src="@drawable/shape_search" />
             
             <ImageView
                 android:layout_width="30dp"
@@ -231,20 +229,20 @@
                 android:background="@drawable/ic_search2"
                 />
 
-            <TextView
-                android:layout_width="285dp"
-                android:layout_height="35dp"
+            <EditText
+                android:layout_width="240dp"
+                android:layout_height="46dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="80dp"
-                android:layout_marginTop="120dp"
-                android:drawablePadding="10dp"
-                android:inputType="textLongMessage"
-                android:text="Search"
+                android:layout_marginTop="119dp"
+                android:backgroundTint="#1F1F20"
+                android:hint="Search"
                 android:textColor="#C5C5C5"
+                android:inputType="text"
+                android:textColorHint="#C5C5C5"
+                android:textColorLink="#1F1F20"
                 android:textSize="25dp"
-                android:textStyle="bold"
-
-                />
+                android:textStyle="bold" />
 
         </RelativeLayout>
     </ScrollView>
