--- a/app/src/main/res/layout/activity_my_playlist.xml
+++ b/app/src/main/res/layout/activity_my_playlist.xml
@@ -54,7 +54,7 @@
                     android:layout_width="306dp"
                     android:layout_height="150dp"
                     android:scaleType="centerCrop"
-                    android:background="@drawable/gambar_contoh"
+                    android:background="@drawable/gambar_home_page"
                     />
             </androidx.cardview.widget.CardView>
 
@@ -114,26 +114,26 @@
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:background="@drawable/slider1"
-                            android:scaleType="centerCrop" />
+                            android:src="@drawable/img_list_lagu01" />
+
                     </androidx.cardview.widget.CardView>
 
                     <TextView
-                        android:layout_width="200dp"
+                        android:layout_width="230dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="The Path (ft. Agassi) [NCS Release]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:layout_width="200dp"
+                        android:layout_width="230dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Wiguez and EH!DE"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
@@ -157,7 +157,7 @@
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:background="@drawable/gambar_contoh"
+                            android:background="@drawable/img_list_lagu02"
                             android:scaleType="centerCrop" />
                     </androidx.cardview.widget.CardView>
 
@@ -166,7 +166,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="Hurt Me [NCS Release]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -176,7 +176,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Evanly"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
@@ -200,16 +200,16 @@
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:background="@drawable/gambar_contoh"
+                            android:background="@drawable/img_list_lagu04"
                             android:scaleType="centerCrop" />
                     </androidx.cardview.widget.CardView>
 
                     <TextView
-                        android:layout_width="200dp"
+                        android:layout_width="230dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="Royalty (ft. Neoni) [NCS Release]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -219,7 +219,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Egzod and Maestro Chives"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
@@ -243,16 +243,16 @@
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:background="@drawable/gambar_contoh"
+                            android:background="@drawable/img_list_lagu04"
                             android:scaleType="centerCrop" />
                     </androidx.cardview.widget.CardView>
 
                     <TextView
-                        android:layout_width="200dp"
+                        android:layout_width="240dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="Where We Started (feat. Jex) [NCS]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -262,7 +262,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Lost Sky"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
@@ -286,7 +286,7 @@
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:background="@drawable/gambar_contoh"
+                            android:background="@drawable/img_list_lagu06"
                             android:scaleType="centerCrop" />
                     </androidx.cardview.widget.CardView>
 
@@ -295,7 +295,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="On and On (feat. Daniel Levi) [NCS Release]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -305,7 +305,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Cartoon"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
@@ -329,7 +329,7 @@
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:background="@drawable/gambar_contoh"
+                            android:background="@drawable/img_list_lagu05"
                             android:scaleType="centerCrop" />
                     </androidx.cardview.widget.CardView>
 
@@ -338,7 +338,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="Make Me Move (feat. Karra) [NCS]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -348,7 +348,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Culture Code"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
