--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -109,7 +109,7 @@
                             android:id="@+id/img_song1"
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:background="@drawable/slider1" />
+                            android:background="@drawable/recentlyplayed_4" />
 
                     </androidx.cardview.widget.CardView>
 
@@ -154,7 +154,7 @@
                             android:id="@+id/img_song2"
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:background="@drawable/slider1" />
+                            android:background="@drawable/recentlyplayed_1" />
 
                     </androidx.cardview.widget.CardView>
 
